src/blocks/donate/streamlined.scss
@import '../../shared/sass/colors';
@import '../../shared/sass/mixins';
@import '../../shared/sass/variables';

.wp-block-newspack-blocks-donate {
	.stripe-payment {
		&__card {
			border: 1px solid $color__border;
			border-radius: 3px;
			padding: 0.34rem 0.66rem;
		}
		input[type='text'],
		input[type='email'],
		&__checkbox,
		button {
			font-size: 0.7em;
		}
		input[type='text'],
		input[type='email'],
		&__messages {
			width: 100%;
		}
		input[type='text'],
		input[type='email'] {
			border-radius: 3px;
			font-family: sans-serif;

			@include media( tablet ) {
				font-size: 14px;
				line-height: 1.2;
			}
		}

		&__inputs {
			&--hidden {
				display: none;
			}
		}

		&__checkbox {
			align-items: center;
			display: flex;

			input {
				height: 1em;
				width: 1em;
				margin-right: 0.5em;
			}
		}

		&__messages {
			> div {
				border: 0 solid $color__info;
				border-left-width: 4px;
				font-size: $font__size-sm;
				margin-top: 0.76rem;
				padding: 0.38rem 0.76rem;
				&:empty {
					border: 0;
					margin: 0;
					padding: 0;
				}
				&.type-error {
					background-color: rgba( $color__error, 0.075 );
					border-color: $color__error;
				}
				&.type-success {
					background-color: rgba( $color__success, 0.075 );
					border-color: $color__success;
				}
			}
		}

		&--disabled {
			button,
			input {
				pointer-events: none;
				opacity: 0.4;
			}
		}

		&__row {
			margin-bottom: 0.5rem;
			&--small {
				line-height: 1em;
				margin-bottom: 0;
			}
			&--flex {
				display: flex;
				align-items: flex-end;
				justify-content: space-between;
				flex-wrap: wrap;
				@include media( tablet ) {
					flex-wrap: nowrap;
				}
				input {
					margin-bottom: 0.5rem;
					@include media( tablet ) {
						margin-bottom: 0;
						width: 50%;
						&:last-child {
							margin-left: 0.5rem;
						}
					}
				}
			}
		}

		&__info {
			color: $color__text-light;
			font-size: 0.7em;
			font-style: italic;
			padding-left: 1.5em;
		}

		&__footer {
			margin-top: 1.5rem;
			margin-bottom: 1.5rem;
		}
		button[type='submit'] {
			margin: 0 10px 0 0 !important;
		}
		&__branding {
			display: block;
			text-decoration: none;

			img {
				display: block;
			}
		}
	}

	&__stripe {
		margin: 0.38rem 0.76rem 0.76rem;

		@include media( tablet ) {
			margin-left: 1.5rem;
			margin-right: 1.5rem;
		}
		&--editor {
			input:first-child {
				margin-top: 0;
			}
		}
	}
}

